syntax = "proto3";
package palomachain.paloma.evm;

import "cosmos_proto/cosmos.proto";

option go_package = "github.com/palomachain/paloma/x/evm/types";

enum DeploymentStatus {
  DEPLOYMENT_STATUS_UNSPECIFIED = 0;
  DEPLOYMENT_STATUS_ONGOING = 1;
  DEPLOYMENT_STATUS_ACTIVE = 2;
  DEPLOYMENT_STATUS_ERROR = 3;
}

// UserSmartContract defines user-uploaded smart contracts
// We keep them in storage, so users can decide to deploy them anywhere
message UserSmartContract {
  message Deployment {
    string chain_reference_id = 1;
    DeploymentStatus status = 2;
    string address = 3;
  }

  string val_address = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  uint64 id = 2;
  string title = 3;
  string abi_json = 4;
  string bytecode = 5;
  string constructor_input = 6;
  repeated Deployment deployments = 7;
}
