syntax = "proto3";
package palomachain.paloma.skyway;

import "cosmos/base/v1beta1/coin.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";
import "palomachain/paloma/skyway/params.proto";
import "palomachain/paloma/skyway/types.proto";
import "palomachain/paloma/valset/common.proto";

option go_package = "github.com/palomachain/paloma/x/skyway/types";

// Msg defines the state transitions possible within skyway
service Msg {
  rpc SendToRemote(MsgSendToRemote) returns (MsgSendToRemoteResponse) {}
  rpc ConfirmBatch(MsgConfirmBatch) returns (MsgConfirmBatchResponse) {}
  rpc SendToPalomaClaim(MsgSendToPalomaClaim)
      returns (MsgSendToPalomaClaimResponse) {}
  rpc BatchSendToRemoteClaim(MsgBatchSendToRemoteClaim)
      returns (MsgBatchSendToRemoteClaimResponse) {}
  rpc CancelSendToRemote(MsgCancelSendToRemote)
    returns (MsgCancelSendToRemoteResponse) {}
  rpc SubmitBadSignatureEvidence(MsgSubmitBadSignatureEvidence)
      returns (MsgSubmitBadSignatureEvidenceResponse) {}
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);

  rpc LightNodeSaleClaim(MsgLightNodeSaleClaim)
      returns (google.protobuf.Empty) {}
}

// MsgSendToRemote
// This is the message that a user calls when they want to bridge an asset
// it will later be removed when it is included in a batch and successfully
// submitted tokens are removed from the users balance immediately
// -------------
// AMOUNT:
// the coin to send across the bridge, note the restriction that this is a
// single coin not a set of coins that is normal in other Cosmos messages
message MsgSendToRemote {
  option (cosmos.msg.v1.signer) = "metadata";
  reserved 1;  
  reserved "sender";  
  string eth_dest = 2;
  cosmos.base.v1beta1.Coin amount = 3 [ (gogoproto.nullable) = false ];
  string chain_reference_id = 4;
  palomachain.paloma.valset.MsgMetadata metadata = 5
      [ (gogoproto.nullable) = false ];
}

message MsgSendToRemoteResponse {}

// MsgConfirmBatch
// When validators observe a MsgRequestBatch they form a batch by ordering
// transactions currently in the txqueue,
// cutting off when the batch either reaches a hardcoded maximum size (to be
// decided, probably around 100) or when transactions stop being profitable
// (TODO determine this without nondeterminism) This message includes the batch
// as well as an Remote signature over this batch by the validator
// -------------
message MsgConfirmBatch {
  option (cosmos.msg.v1.signer) = "metadata";
  uint64 nonce = 1;
  string token_contract = 2;
  string eth_signer = 3;
  string orchestrator = 4;
  string signature = 5;
  palomachain.paloma.valset.MsgMetadata metadata = 6
      [ (gogoproto.nullable) = false ];
}

message MsgConfirmBatchResponse {
}

// MsgSendToPalomaClaim
// When more than 66% of the active validator set has
// claimed to have seen the deposit enter the ethereum blockchain coins are
// issued to the Cosmos address in question
// -------------
message MsgSendToPalomaClaim {
  option (cosmos.msg.v1.signer) = "metadata";
  uint64 event_nonce = 1;
  uint64 eth_block_height = 2;
  string token_contract = 3;
  string amount = 4 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string ethereum_sender = 5;
  string paloma_receiver = 6;
  string orchestrator = 7;
  string chain_reference_id = 8;
  palomachain.paloma.valset.MsgMetadata metadata = 9
      [ (gogoproto.nullable) = false ];
  uint64 skyway_nonce = 10;
}

message MsgSendToPalomaClaimResponse {
}

// BatchSendToRemoteClaim claims that a batch of send to eth
// operations on the bridge contract was executed.
message MsgBatchSendToRemoteClaim {
  option (cosmos.msg.v1.signer) = "metadata";
  uint64 event_nonce = 1;
  uint64 eth_block_height = 2;
  uint64 batch_nonce = 3;
  string token_contract = 4;
  string chain_reference_id = 5;
  string orchestrator = 6;
  palomachain.paloma.valset.MsgMetadata metadata = 7
      [ (gogoproto.nullable) = false ];
  uint64 skyway_nonce = 8;
}

message MsgBatchSendToRemoteClaimResponse {}

// This call allows the sender (and only the sender)
// to cancel a given MsgSendToRemote and recieve a refund
// of the tokens
message MsgCancelSendToRemote {
  option (cosmos.msg.v1.signer) = "metadata";
  uint64 transaction_id = 1;
  reserved 2;  
  reserved "sender";  
  palomachain.paloma.valset.MsgMetadata metadata = 3
      [ (gogoproto.nullable) = false ];
}

message MsgCancelSendToRemoteResponse {}

// This call allows anyone to submit evidence that a
// validator has signed a batch that never
// existed on the Cosmos chain.
// Subject contains the batch.
message MsgSubmitBadSignatureEvidence {
  option (cosmos.msg.v1.signer) = "metadata";
  google.protobuf.Any subject = 1
      [ (cosmos_proto.accepts_interface) = "RemoteereumSigned" ];
  string signature = 2;
  string sender = 3 [ deprecated = true ];
  string chain_reference_id = 4;
  palomachain.paloma.valset.MsgMetadata metadata = 5
      [ (gogoproto.nullable) = false ];
}

message MsgSubmitBadSignatureEvidenceResponse {
}

message EventSetOperatorAddress {
  string message = 1;
  string address = 2;
}

message EventBatchCreated {
  string message = 1;
  string batch_nonce = 2;
}

message EventBatchConfirmKey {
  string message = 1;
  string batch_confirm_key = 2;
}

message EventBatchSendToRemoteClaim {
  string nonce = 1;
}

message EventClaim {
  string message = 1;
  string claim_hash = 2;
  string attestation_id = 3;
}

message EventBadSignatureEvidence {
  string message = 1;
  string bad_eth_signature = 2;
  string bad_eth_signature_subject = 3;
}

message EventMultisigUpdateRequest {
  string bridge_contract = 1;
  string bridge_chain_id = 2;
  string multisig_id = 3;
  string nonce = 4;
}

message EventSignatureSlashing {
  string type = 1;
  string address = 2;
}

message EventOutgoingTxId {
  string message = 1;
  string tx_id = 2;
}

message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  // authority is the address that controls the module (defaults to x/gov unless
  // overwritten).
  string authority = 1 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];

  // params defines the x/skyway parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [ (gogoproto.nullable) = false ];

  palomachain.paloma.valset.MsgMetadata metadata = 3
      [ (gogoproto.nullable) = false ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {
}

// MsgLightNodeSaleClaim is sent by pigeon whenever it gets a sale notification
// from compass
message MsgLightNodeSaleClaim {
  option (cosmos.msg.v1.signer) = "metadata";

  palomachain.paloma.valset.MsgMetadata metadata = 1
      [ (gogoproto.nullable) = false ];

  uint64 event_nonce = 2;
  uint64 eth_block_height = 3;
  string orchestrator = 4;
  string chain_reference_id = 5;
  uint64 skyway_nonce = 6;

  string client_address = 7 [ (cosmos_proto.scalar) = "cosmos.AddressString" ];
  string amount = 8 [
    (gogoproto.customtype) = "cosmossdk.io/math.Int",
    (gogoproto.nullable) = false
  ];
  string smart_contract_address = 9;
}
